FIX: No scrollbar was shown on search results overflow

--- a/frontend-html/src/gui/Components/Search/ResultItem.module.scss
+++ b/frontend-html/src/gui/Components/Search/ResultItem.module.scss
@@ -30,6 +30,8 @@
   white-space: nowrap;
   display: flex;
   align-items: center;
+  user-select: none;
+  margin-right: 10px;
 }
 
 .itemTitle {
